Functioning, passing target value, need to make target component

--- a/src/components/Input/Input.module.css
+++ b/src/components/Input/Input.module.css
@@ -27,3 +27,13 @@
 .inputField:active {
   outline: none;
 }
+
+.success {
+  color: green;
+}
+.danger {
+  color: red;
+}
+.ok {
+  color: blue;
+}
