--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,11 @@
   box-sizing: border-box;
 }
 
+.App {
+  position: relative;
+  overflow-x: hidden;
+}
+
 .swipeDiv {
   min-height: 95vh;
   overflow: hidden;
