--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,48 @@
+:root {
+  --black: #111;
+  --time: 0.2s;
+}
+
 *, *::before, *::after {
   box-sizing: border-box;
+  transition:
+    background-color var(--time),
+    color var(--time);
+}
+
+.App.Light {
+  --primary: #00bf03;
+  --secondary: #f8f;
+  --text: black;
+  --background: #eee;
+  --gray: #999;
+  --disabled: #ddd;
+  --success: green;
+  --danger: red;
+  --ok: #006be1;
+}
+
+.App.Dark {
+  --primary: #004701;
+  --secondary: #f8f;
+  --text: #ddd;
+  --background: #151515;
+  --gray: #666;
+  --disabled: #333;
+  --success: green;
+  --danger: red;
+  --ok: #5ba9ff;
 }
 
 .App {
   position: relative;
   overflow-x: hidden;
+  height: 100vh;
+  background-color: var(--background);
+  color: var(--text);
 }
 
 .swipeDiv {
-  min-height: 95vh;
+  height: 100%;
   overflow: hidden;
 }
