--- a/src/components/SettingsPanel/SettingsPanel.module.css
+++ b/src/components/SettingsPanel/SettingsPanel.module.css
@@ -4,8 +4,8 @@
   right: 0;
   height: 100%;
   width: 80vw;
-  background-color: black;
-  color: white;
+  background-color: var(--black);
+  color: var(--gray);
   transition: transform 0.3s;
   z-index: 101;
 }
@@ -18,6 +18,22 @@
   transform: translateX(100%);
 }
 
-.SettingsPanel h2 {
+.heading {
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem;
+}
+
+.heading h2 {
   text-align: center;
+  margin: 0;
+}
+
+.darkToggle {
+  height: 2rem;
+  width: 2rem;
+  border-radius: 50%;
+  background-color: inherit;
+  border: 1px solid var(--gray);
+  color: inherit;
 }
