--- a/src/components/DrawerToggle/DrawerToggle.module.css
+++ b/src/components/DrawerToggle/DrawerToggle.module.css
@@ -15,6 +15,6 @@
 .DrawerToggle div {
   width: 90%;
   height: 3px;
-  background-color: var(--text);
+  background-color: var(--white);
   margin: 3px 0;
 }
