--- a/src/components/Input/Input.module.css
+++ b/src/components/Input/Input.module.css
@@ -5,6 +5,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 0.4rem 1rem;
+  color: inherit;
 }
 
 .label {
@@ -16,11 +17,14 @@
   -moz-appearance: textfield;
   appearance: textfield;
   font-size: 1rem;
-  border: 2px solid var(--gray);
-  border-radius: 5px;
+  border: none;
   padding: 0.5rem;
   outline: none;
   width: 50vw;
+  background-color: var(--secondary);
+  color: inherit;
+  font-weight: bold;
+  font-family: inherit;
 }
 
 .inputField:focus,
@@ -38,8 +42,8 @@
   border-color: var(--success);
 }
 .danger {
-  color: var(--red);
-  border-color: var(--red);
+  color: var(--danger);
+  border-color: var(--danger);
 }
 .ok {
   color: var(--ok);
