--- a/src/components/TopBar/TopBar.module.css
+++ b/src/components/TopBar/TopBar.module.css
@@ -4,7 +4,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 0.5rem;
-  color: inherit;
+  color: var(--white);
   background-color: var(--primary);
   /* position: fixed; */
   /* bottom: 0; */
