--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 :root {
   --primary: #424680;
-  --black: #141525;
+  --black: #191a2e;
   --white: #eeeff6;
   --gradient: #14152533;
   --time: 0.2s;
