--- a/src/components/SettingsPanel/PaneEditor/PaneEditor.module.css
+++ b/src/components/SettingsPanel/PaneEditor/PaneEditor.module.css
@@ -1,9 +1,6 @@
 .PaneEditor {
   font-size: 1rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0.4rem 1rem;
+  
   color: var(--white);
   opacity: 0.8;
 }
@@ -11,6 +8,13 @@
 .PaneEditor.editing {
   opacity: 1;
   background-color: var(--primary-dark);
+}
+
+.PaneEditor form {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.4rem 1rem;
 }
 
 .PaneEditor.editing input {
