--- a/src/components/PaneNav/PaneNav.module.css
+++ b/src/components/PaneNav/PaneNav.module.css
@@ -21,7 +21,6 @@
 }
 
 .arrow {
-  /* height: 44px; */
   margin: 1rem 0;
   display: flex;
   justify-content: center;
@@ -35,7 +34,7 @@
 .line {
   width: 24px;
   height: 4px;
-  background-color: var(--text);
+  background-color: var(--primary);
   border-radius: 2px;
 }
 
@@ -47,30 +46,39 @@
   transform-origin: right;
 }
 
-.left .top {
-  transform:
-    rotate(45deg)
-    translateX(1px)
-    translateY(50%);
-}
 
-.left .bottom {
+.left .top {
+  /* background-image: linear-gradient(135deg, var(--primary), #0000); */
   transform: 
-    rotate(-45deg)
-    translateX(1px);
+  rotate(-45deg)
+  translateX(-2px)
+  translateY(2px);
 }
 
 .right .top {
+  /* background-image: linear-gradient(-135deg, var(--primary), #0000); */
+  transform: 
+  rotate(45deg)
+  translateX(2px)
+  translateY(2px);
+}
+
+.left .bottom {
+  /* background-image: linear-gradient(45deg, var(--primary), #0000); */
   transform:
-    rotate(-45deg)
-    translateX(-1px);
+    rotate(45deg)
+    translateX(-2px)
+    translateY(-2px);
 }
 
 .right .bottom {
-  transform: 
-    rotate(45deg)
-    translateX(-1px);
+  /* background-image: linear-gradient(-45deg, var(--primary), #0000); */
+  transform:
+    rotate(-45deg)
+    translateX(2px)
+    translateY(-2px);
 }
+
 
 .disabled {
   background-color: var(--disabled);
