--- a/src/components/SettingsPanel/PaneEditor/PaneEditor.module.css
+++ b/src/components/SettingsPanel/PaneEditor/PaneEditor.module.css
@@ -18,7 +18,7 @@
 }
 
 .PaneEditor.editing input {
-  border-color: var(--ok);
+  border-color: var(--primary);
   border-radius: 3px;
   outline: none;
 }
@@ -35,6 +35,7 @@
   width: 40%;
   margin: 0 0.2rem;
   font-size: 0.9rem;
+  padding: 0 0.2rem;
 }
 
 .PaneEditor input:focus,
@@ -55,7 +56,7 @@
 
 .PaneEditor .name,
 .PaneEditor .numOfInput {
-  width: 20vw;
+  width: 18vw;
 }
 
 .PaneEditor .name {
@@ -64,13 +65,13 @@
   font-weight: inherit;
 }
 
-.PaneEditor .numOfLabel {
+.PaneEditor .numOf {
   font-weight: bold;
 }
 
 .PaneEditor .numOfInput {
   text-transform: capitalize;
-  max-width: 80px;
+  max-width: 70px;
 }
 
 .PaneEditor .btnDone {
