--- a/src/components/Input/Input.module.css
+++ b/src/components/Input/Input.module.css
@@ -15,6 +15,12 @@
   margin-right: 0.5rem;
 }
 
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
+
 .inputField {
   -moz-appearance: textfield;
   appearance: textfield;
