--- a/src/components/DrawerToggle/DrawerToggle.module.css
+++ b/src/components/DrawerToggle/DrawerToggle.module.css
@@ -1,6 +1,6 @@
 .DrawerToggle {
   height: 100%;
-  padding: 10px;
+  padding: 10px 0;
   box-sizing: border-box;
   cursor: pointer;
   z-index: 1000;
